--- a/src/LiveDWAPI.Infrastructure/LiveDWAPI.Infrastructure.csproj
+++ b/src/LiveDWAPI.Infrastructure/LiveDWAPI.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LiveDWAPI.Application\LiveDWAPI.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.15" />
+  </ItemGroup>
+
 </Project>
