--- a/src/LiveDWAPI.Web/LiveDWAPI.Web.csproj
+++ b/src/LiveDWAPI.Web/LiveDWAPI.Web.csproj
@@ -10,8 +10,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LiveDWAPI.Application\LiveDWAPI.Application.csproj" />
+    <ProjectReference Include="..\LiveDWAPI.Infrastructure\LiveDWAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
