--- a/src/LiveDWAPI.Web/LiveDWAPI.Web.csproj
+++ b/src/LiveDWAPI.Web/LiveDWAPI.Web.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>f4922676-30ff-43f0-ba16-630a89f217a2</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <RuntimeIdentifiers>linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
