--- a/src/LiveDWAPI.Web/appsettings.json
+++ b/src/LiveDWAPI.Web/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LiveConnection": "Data Source=.;Initial Catalog=HIVCaseSurveillance;Persist Security Info=True;User ID=dev;Password=dev;Pooling=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
-  }
+  },
+  "AllowedCorsOrigins": []
 }
