--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,7 +1,7 @@
 TAG=latest
 APP_PORT=8058
 APP_HOST_PORT=8080
-APP_ORIGIN_0=http://localhost:3000
+APP_ORIGIN_0=https://maps.kenyahmis.org
 APP_ORIGIN_1=https://localhost:3000
 DB_HOST=Host
 DB_TYPE=SqlServer
