--- a/src/LiveDWAPI.Web/appsettings.json
+++ b/src/LiveDWAPI.Web/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ServicesApi": {
+    "NDW": "https://dwh.nascop.org/api/care-treatment/sites"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LiveConnection": "Data Source=.;Initial Catalog=HIVCaseSurveillance;Persist Security Info=True;User ID=dev;Password=dev;Pooling=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
