--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -3,6 +3,7 @@ APP_PORT=8058
 APP_HOST_PORT=8080
 APP_ORIGIN_0=https://maps.kenyahmis.org
 APP_ORIGIN_1=https://localhost:3000
+APP_SVC_NDW=https://dwh.nascop.org/api/care-treatment/sites
 DB_HOST=Host
 DB_TYPE=SqlServer
 DB_NAME=Database
