--- a/src/LiveDWAPI.Infrastructure/LiveDWAPI.Infrastructure.csproj
+++ b/src/LiveDWAPI.Infrastructure/LiveDWAPI.Infrastructure.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LiveDWAPI.Application\LiveDWAPI.Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.15">
       <PrivateAssets>all</PrivateAssets>
@@ -19,6 +15,11 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Net.Http.Json" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LiveDWAPI.Application\LiveDWAPI.Application.csproj" />
+    <ProjectReference Include="..\LiveDWAPI.Domain\LiveDWAPI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
